; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/backlight/extr_hx8357.c_hx8357_enter_standby.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/backlight/extr_hx8357.c_hx8357_enter_standby.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lcd_device = type { i32 }

@HX8357_SET_DISPLAY_OFF = common dso_local global i32 0, align 4
@HX8357_ENTER_SLEEP_MODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lcd_device*)* @hx8357_enter_standby to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hx8357_enter_standby(%struct.lcd_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.lcd_device*, align 8
  %4 = alloca i32, align 4
  store %struct.lcd_device* %0, %struct.lcd_device** %3, align 8
  %5 = load %struct.lcd_device*, %struct.lcd_device** %3, align 8
  %6 = load i32, i32* @HX8357_SET_DISPLAY_OFF, align 4
  %7 = call i32 @hx8357_spi_write_byte(%struct.lcd_device* %5, i32 %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  store i32 %11, i32* %2, align 4
  br label %23

12:                                               ; preds = %1
  %13 = call i32 @usleep_range(i32 10000, i32 12000)
  %14 = load %struct.lcd_device*, %struct.lcd_device** %3, align 8
  %15 = load i32, i32* @HX8357_ENTER_SLEEP_MODE, align 4
  %16 = call i32 @hx8357_spi_write_byte(%struct.lcd_device* %14, i32 %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %12
  %20 = load i32, i32* %4, align 4
  store i32 %20, i32* %2, align 4
  br label %23

21:                                               ; preds = %12
  %22 = call i32 @msleep(i32 120)
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %21, %19, %10
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @hx8357_spi_write_byte(%struct.lcd_device*, i32) #1

declare dso_local i32 @usleep_range(i32, i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
